fixed project spacing

--- a/css/style.css
+++ b/css/style.css
@@ -481,3 +481,8 @@ video {
   height: 500px;
   border: none;
 }
+
+dt{
+  font-size: 25;
+  font-weight: bold;
+}
